MP4 file type cannot be played a second time.
Categories
(Firefox for Android Graveyard :: Audio/Video, defect, P2)
Tracking
(firefox-esr60 unaffected, firefox-esr6869+ verified, firefox67 unaffected, firefox68 unaffected, firefox69 verified, firefox70 verified)
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | 69+ | verified |
| firefox67 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | verified |
| firefox70 | --- | verified |
People
(Reporter: diana.rus, Assigned: jhlin)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [fennec68.1])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr68+
|
Details | Review |
Environment
Device: Google Pixel C (Android 8.0.0)
Build: Firefox Nightly 69.0a1 (2019-07-04)
Steps to reproduce:
- Go to "http://techslides.com/sample-webm-ogg-and-mp4-video-files-for-html5".
- Tap on "Sample MP4 Video File" link.
- Leave the video play.
- Play the video again.
Expected Result: The video can be played a second time.
Actual Result: The video has a grey layer after initiating the play action. The video cannot be played a second time.
NOTES:
- I cannot reproduce the issue on:
- Firefox Release 67.0.3
- Firefox Beta 68.0b14
- Firefox Nightly 68.0a1 (2019-07-01).
- Please view the [video][https://drive.google.com/file/d/1Gh81pE_R7E610ceLIErG2CRuZlPo0mSe/view?usp=sharing]
| Assignee | ||
Comment 1•7 years ago
|
||
In bug 1552607/D36382, RemoteDataDecoder always increases session ID but
CodecProxy only performs flush IPC when neccessary. This will cause the
ID numbers out of sync and prevent remote decoder from receiving any
more input.
Triaging as it's in my queue, please adjust priority as required.
Comment 3•7 years ago
|
||
[Tracking Requested - why for this release]:
John says this bug is a regression from the fix for bug 1552607. John recommends we uplift the fix for bug 1552607 to Fennec ESR 68.0.x or 68.1, so we should also uplift this bug's fix.
Since Fennec users will be switched to the ESR 68 channel for the next 6-12 months, the only way to release a fix to Fennec users will be to uplift to ESR.
Updated•7 years ago
|
Updated•7 years ago
|
Updated•7 years ago
|
Comment 5•7 years ago
|
||
| bugherder | ||
Updated•7 years ago
|
| Assignee | ||
Comment 6•7 years ago
|
||
Comment on attachment 9076293 [details]
Bug 1563734 - always sync session ID from remote decoder. r?jya
Beta/Release Uplift Approval Request
- User impact if declined: Cannot play MP4 files the second time.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): the patch syncs 2 independent counters by mirroring one to the other.
- String changes made/needed:
Comment 7•7 years ago
|
||
John, if we want to ship your fix in Fennec, we'll need to uplift to ESR 68. We build and test Fennec in mozilla-central 70 and mozilla-beta 69, but we don't ship those builds to users. The Fennec Nightly and Beta channels currently get Fennec ESR 68 builds.
| Assignee | ||
Comment 8•7 years ago
|
||
(In reply to Chris Peterson [:cpeterson] from comment #7)
John, if we want to ship your fix in Fennec, we'll need to uplift to ESR 68. We build and test Fennec in mozilla-central 70 and mozilla-beta 69, but we don't ship those builds to users. The Fennec Nightly and Beta channels currently get Fennec ESR 68 builds.
Thanks for the info. I'm pulling esr68 repo now to see if existing patches can be applied correctly, and will request uplift asap.
Comment 9•7 years ago
|
||
Comment on attachment 9076293 [details]
Bug 1563734 - always sync session ID from remote decoder. r?jya
Fixes MP4 playback issues. Looking at the patch, it appears to also affect GeckoView? Anyway, approved for Beta69. Note that it will indeed need a rebased patch for Fennec ESR68.
Comment 10•7 years ago
|
||
| bugherder uplift | ||
| Assignee | ||
Comment 11•7 years ago
|
||
Comment on attachment 9076293 [details]
Bug 1563734 - always sync session ID from remote decoder. r?jya
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Regressed by bug 1552607 and should be uplifted if that's approved.
- User impact if declined: Cannot play MP4 video the second time.
- Fix Landed on Version: 69
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This patch simplifies the logic of interprocess variables syncing.
- String or UUID changes made by this patch:
Comment 12•7 years ago
|
||
Hi!
Verified as fixed on Beta 69.0b4, Nightly 70.0a1 (2019-07-11) with Samsung Galaxy Tab S3 (Android 8), Huawei Honor 8 (Android 7.0).
I will mark this issue as verified on Firefox 69 and Firefox 70.
Comment 13•7 years ago
|
||
Comment on attachment 9076293 [details]
Bug 1563734 - always sync session ID from remote decoder. r?jya
Follow-up fix for bug 1552607. Approved for Fennec 68.1b3.
Comment 14•7 years ago
|
||
| bugherder uplift | ||
Comment 15•7 years ago
|
||
Hi!
Verified as fixed on ESR 68.1b3 with OnePlus 5T (Android 9) and Motorola Nexus 6 (Android 7.1.1).
I will mark this issue as verified on Firefox esr68. Thanks!
Updated•7 years ago
|
Updated•5 years ago
|
Description
•