Bug 1563734 - always sync session ID from remote decoder. r=jya, a=RyanVM

In bug 1552607/D36382, RemoteDataDecoder always increases session ID but
CodecProxy only performs flush IPC when neccessary. This will cause the
ID numbers out of sync and prevent remote decoder from receiving any
more input. By reading the session ID in dequeued input samples, the
numbers can always be in sync.

Differential Revision: https://phabricator.services.mozilla.com/D37123